<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_working"
            android:icon="@drawable/ic_working"
            android:title="@string/menu_working"/>
        <item
            android:id="@+id/nav_arriving"
            android:icon="@drawable/ic_arriving"
            android:title="@string/menu_arriving"/>
        <item
            android:id="@+id/nav_finished"
            android:icon="@drawable/ic_finished"
            android:title="@string/menu_finished"/>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/menu_schedule"/>
    </group>
</menu>