<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:scrollbars="vertical"
    android:scrollbarStyle="insideInset"
    android:layout_height="match_parent"
    tools:context=".Task_Insertion">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addtask"
        android:textSize="40sp"
        android:lines="2"
        android:textAlignment="center"
        android:layout_margin="50dp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/addTaskEditText"/>

    <EditText
        android:id="@+id/addTaskEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:background="@drawable/roundcorner"
        android:fontFamily="sans-serif-medium"
        android:padding="10dp"
        android:textAlignment="center"
        android:translationZ="10dp"
        android:hint="@string/addnewtask"
        android:layout_margin="30dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:inputType="text|textCapSentences"
        android:autofillHints="creditCardExpirationDate,name,workout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <EditText
        android:id="@+id/addDescriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:minHeight="200dp"
        android:background="@drawable/roundcorner"
        android:fontFamily="sans-serif"
        android:hint="@string/adddescription"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:layout_margin="20dp"
        android:lines="10"
        android:inputType="text|textMultiLine|textCapSentences"
        android:gravity="top|start"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskEditText"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/startdateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectstartdate"
        android:layout_margin="30dp"
        android:translationZ="10dp"
        android:padding="10dp"
        android:background="@color/first"
        app:layout_constraintEnd_toStartOf="@+id/starttimeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDescriptionEditText"/>

    <Button
        android:id="@+id/starttimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectstarttime"
        android:background="@color/first"
        android:padding="10dp"
        android:layout_margin="30dp"
        android:translationZ="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startdateButton"
        app:layout_constraintTop_toBottomOf="@id/addDescriptionEditText"/>


    <Button
        android:id="@+id/enddateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectenddate"
        android:layout_margin="30dp"
        android:translationZ="10dp"
        android:padding="10dp"
        android:visibility="invisible"
        android:background="@color/red"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/endtimeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startdateButton"/>

    <Button
        android:id="@+id/endtimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectendtime"
        android:padding="10dp"
        android:layout_margin="30dp"
        android:translationZ="10dp"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enddateButton"
        app:layout_constraintTop_toBottomOf="@id/startdateButton"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundcorner"
        android:text="@string/submit"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enddateButton"
        />



</androidx.constraintlayout.widget.ConstraintLayout>